--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
             <id>default-cli</id>
             <configuration>
               <mainClass>
-                no.ntnu.mathieno.inventorymanager/no.ntnu.mathieno.inventorymanager.HelloApplication
+                no.ntnu.mathieno.inventorymanager/no.ntnu.mathieno.inventorymanager.MainApplication
               </mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
